# HomeSecurity

./: .gitconfig  test.cpp
Base/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  server.cpp
Base/TestModule/: demomodule.cpp  myclass.cpp  myclass.h  scratch.py  setup.py
Base/src/: CMakeLists.txt
Base/tests/: CMakeLists.txt
BaseService/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  main.py  scratch.py  server.py  setup.py
BaseService/BaseService/: config.py  sensor_handler.py  server.py  sound_player.py
BaseService/scripts/: install_boost  install_boost.py
BaseService/src/: CMakeLists.txt  config.py  exceptions.py  sensor_handler.py  server.py  sound_player.py
BaseService/src/bindings/: demomodule.cpp
BaseService/src/networking/: listener.cpp  listener.h
BaseService/tests/: CMakeLists.txt
BaseService/tests/networking/: listener_test.cpp
RemoteClient/: RemoteClient.ino  networking_utils.hpp  secrets.h
WiFiClient/: WiFiClient.ino  helper.hpp  ipscanner.cpp  ipscanner.h  secrets.h  system_utils.hpp
node/: node.ino  secrets.h  system_utils.hpp
